# gemini-assistant

./: Cargo.toml  README.md  REBUILD-PLAN.md
src/: audio.rs  config.rs  main.rs  screenshot.rs  session.rs  transcript.rs
